Fixed the landing page issue and the text not visible issue on about section on smaller mobile devices

--- a/client/src/components/LandingPage/LandingPage.css
+++ b/client/src/components/LandingPage/LandingPage.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
   
 }
+.mkresp{
+  width: 100%;
+  
+}
 #heroSection {
   display: grid;
   place-items: center;
